--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             
             osm = L.tileLayer('http://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                attribution: '<a href="http://geodienste.lyrk.de/copyright">Lizenzinformationen</a>, Tiles by <a href="http://geodienste.lyrk.de/">Lyrk</a>',
+                attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap contributers</a>',
                 maxZoom: 19
             }).addTo(map);
 
