--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 maxZoom: 19
             }).addTo(map);
 
-            var luft = L.tileLayer.wms("http://www.landesvermessung.sachsen.de/ias/basiskarte4/service/SRV4ADV_P_DOPRGB/WMSFREE_TK/wmsservice", {
-                layers: 'adv_dop',
+            var luft = L.tileLayer.wms("https://geodienste.sachsen.de/wms_geosn_dop-rgb/guest?", {
+                layers: 'sn_dop_020',
                 format: 'image/png',
                 transparent: true,
                 attribution: "<a href='http://www.geosn.sachsen.de/'>&copy; Staatsbetrieb Geobasisinformation und Vermessung Sachsen (GeoSN), 2013</a>",
@@ -70,7 +70,7 @@
                 layers: 'AD.Adress_Name',
                 format: 'image/png',
                 transparent: true,
-                attribution: "<a href='http://www.geosn.sachsen.de/'>&copy; Staatsbetrieb Geobasisinformation und Vermessung Sachsen (GeoSN), 2013</a>",
+                attribution: "<a href='http://www.geosn.sachsen.de/'>&copy; Staatsbetrieb Geobasisinformation und Vermessung Sachsen (GeoSN), 2015</a>",
                 tileSize: 1024,
                 maxZoom: 22
             });
