--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="http://static.lyrk.de/leaflet/0.7/leaflet.css" />
         <script src="http://static.lyrk.de/leaflet/0.7/leaflet.js"></script>
         <script src="https://rawgithub.com/mylen/leaflet.TileLayer.WMTS/master/leaflet-tilelayer-wmts.js"></script>
+        <script src="./leaflet-hash/leaflet-hash.js" type="text/javascript"></script>
         <style type="text/css">
             #map { height: 100%; width: 100%; position: absolute;}
             html, body {
@@ -46,6 +47,7 @@
         </div>
         <script type="text/javascript"> 
             var map = L.map('map').setView([51.0474, 13.7384], 13);
+            var hash = new L.Hash(map);
 
             
             osm = L.tileLayer('http://tile.openstreetmap.org/{z}/{x}/{y}.png', {
