--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <link rel="stylesheet" href="http://static.lyrk.de/leaflet/0.7/leaflet.css" />
-        <script src="http://static.lyrk.de/leaflet/0.7/leaflet.js"></script>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css" />
+        <script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js"></script>
         <script src="https://rawgithub.com/mylen/leaflet.TileLayer.WMTS/master/leaflet-tilelayer-wmts.js"></script>
         <script src="./leaflet-hash/leaflet-hash.js" type="text/javascript"></script>
         <style type="text/css">
