--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                 font-size: 16px;
                 width: 800px;
             }
+            #rawlocation {
+                font-size: 16px;
+                width: 800px;
+            }
         </style>
     </head>
     <body>
@@ -43,7 +47,8 @@
         <div id="cross"></div>
         <div id="text">
             <input type="text" id="outputtext"><br><br>
-            <input type="text" id="objectlocation">
+            <input type="text" id="objectlocation"><br><br>
+            <input type="text" id="rawlocation">
         </div>
         <script type="text/javascript"> 
             var map = L.map('map').setView([51.0474, 13.7384], 13);
@@ -105,6 +110,7 @@
                 ll=map.getCenter();
                 document.getElementById('outputtext').value = "{{Location dec|"+ll.lat+"|"+ll.lng+"}}" ;
                 document.getElementById('objectlocation').value = "{{Object location|"+ll.lat+"|"+ll.lng+"}}" ;
+                document.getElementById('rawlocation').value = ll.lat+", "+ll.lng ;
             })
         </script>
     </body>
